@@ -5,6 +5,7 @@ import by.duallab.anhelinam.bus.writer.BusWriter;
 
 import java.io.IOException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.format.DateTimeFormatter;
@@ -12,18 +13,16 @@ import java.util.List;
 
 public class BusWriterImpl implements BusWriter {
     @Override
-    public void write(List<Bus> schedule, String fileName) {
-//        URL filePath = getClass().getResource(fileName);
-//        try (Files.createFile(Paths.get(String.valueOf(filePath)))) {
-//            for (Bus bus : schedule) {
-//                String line = bus.getCompany().toString().charAt(0) + bus.getCompany().toString().toLowerCase() +
-//                        " " + bus.getDepartureTime().format(DateTimeFormatter.ofPattern("HH:mm")) +
-//                        " " + bus.getArrivalTime().format(DateTimeFormatter.ofPattern("HH:mm"));
-//                Files.write(Paths.get(String.valueOf(filePath)), line);
-//            }
-//        } catch (IOException e) {
-//            e.printStackTrace();
-//        }
+    public void write(List<Bus> schedule, String filePath) {
+        try {
+            StringBuilder line = new StringBuilder();
+            for (Bus bus : schedule) {
+                line.append(bus.toString()).append('\n');
+            }
+            Files.writeString(Paths.get(filePath), line.toString());
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
     }
 }
 
